changed author bio layout

--- a/_includes/author-bio.html
+++ b/_includes/author-bio.html
@@ -7,6 +7,6 @@
   {% if site.owner.facebook %}<a href="http://facebook.com/{{ site.owner.facebook }}" target="_blank"><i class="icon-facebook"></i> Facebook</a>{% endif %}
   {% if site.owner.github %}<a href="http://github.com/{{ site.owner.github }}" target="_blank"><i class="icon-github"></i> Github</a>{% endif %}
   {% if site.owner.tumblr %}<a href="http://{{ site.owner.tumblr }}.tumblr.com" target="_blank"><i class="icon-tumblr"></i> Tumblr</a>{% endif %}
-  {% if site.owner.instagram %}<p style="text-indent:0;"><a href="http://instagram.com/{{ site.owner.instagram }}" target="_blank"><i class="icon-instagram"></i> Instagram</a></p>{% endif %}
+  {% if site.owner.instagram %}<a href="http://instagram.com/{{ site.owner.instagram }}" target="_blank"><i class="icon-instagram"></i> Instagram</a>{% endif %}
 </p>
 {% if site.owner.lastfm %}<p style="text-indent:0;"><a href="http://lastfm.com/{{ site.owner.lastfm }}" target="_blank"><i class="icon-lastfm"></i> Last.fm</a></p>{% endif %}
