--- a/_includes/author-bio.html
+++ b/_includes/author-bio.html
@@ -2,11 +2,11 @@
 <h4>{{ site.owner.name }}</h4>
 <p>{{ site.owner.bio }}</p>
 <p style="text-indent:0;margin-top:1.5em;">
-  {% if site.owner.linkedin %}<a href="http://linkedin.com/in/{{ site.owner.linkedin }}" target="_blank"><i class="icon-linkedin"></i> LinkedIn</a>{% endif %}	
-  {% if site.owner.twitter %}<a href="http://twitter.com/{{ site.owner.twitter }}" target="_blank"><i class="icon-twitter"></i> Twitter </a>{% endif %}
+  {% if site.owner.linkedin %}<a href="http://linkedin.com/in/{{ site.owner.linkedin }}" target="_blank"><i class="icon-linkedin"></i> </a>{% endif %}	
+  {% if site.owner.twitter %}<a href="http://twitter.com/{{ site.owner.twitter }}" target="_blank"><i class="icon-twitter"></i> </a>{% endif %}
   {% if site.owner.facebook %}<a href="http://facebook.com/{{ site.owner.facebook }}" target="_blank"><i class="icon-facebook"></i> Facebook</a>{% endif %}
-  {% if site.owner.github %}<a href="http://github.com/{{ site.owner.github }}" target="_blank"><i class="icon-github"></i> Github</a>{% endif %}
-  {% if site.owner.tumblr %}<a href="http://{{ site.owner.tumblr }}.tumblr.com" target="_blank"><i class="icon-tumblr"></i> Tumblr</a>{% endif %}
-  {% if site.owner.instagram %}<a href="http://instagram.com/{{ site.owner.instagram }}" target="_blank"><i class="icon-instagram"></i> Instagram</a>{% endif %}
+  {% if site.owner.github %}<a href="http://github.com/{{ site.owner.github }}" target="_blank"><i class="icon-github"></i> </a>{% endif %}
+  {% if site.owner.tumblr %}<a href="http://{{ site.owner.tumblr }}.tumblr.com" target="_blank"><i class="icon-tumblr"></i> </a>{% endif %}
+  {% if site.owner.instagram %}<a href="http://instagram.com/{{ site.owner.instagram }}" target="_blank"><i class="icon-instagram"></i> </a>{% endif %}
 </p>
 {% if site.owner.lastfm %}<p style="text-indent:0;"><a href="http://lastfm.com/{{ site.owner.lastfm }}" target="_blank"><i class="icon-lastfm"></i> Last.fm</a></p>{% endif %}
