added spacing on home

--- a/_includes/author-bio.html
+++ b/_includes/author-bio.html
@@ -4,7 +4,7 @@
 <p style="text-indent:0;margin-top:1.5em;">
   {% if site.owner.linkedin %}<a href="http://linkedin.com/in/{{ site.owner.linkedin }}" target="_blank"><i class="icon-linkedin"></i> </a>{% endif %}	
   {% if site.owner.twitter %}<a href="http://twitter.com/{{ site.owner.twitter }}" target="_blank"><i class="icon-twitter"></i> </a>{% endif %}
-  {% if site.owner.facebook %}<a href="http://facebook.com/{{ site.owner.facebook }}" target="_blank"><i class="icon-facebook"></i> Facebook</a>{% endif %}
+  {% if site.owner.facebook %}<a href="http://facebook.com/{{ site.owner.facebook }}" target="_blank"><i class="icon-facebook"></i> </a>{% endif %}
   {% if site.owner.github %}<a href="http://github.com/{{ site.owner.github }}" target="_blank"><i class="icon-github"></i> </a>{% endif %}
   {% if site.owner.tumblr %}<a href="http://{{ site.owner.tumblr }}.tumblr.com" target="_blank"><i class="icon-tumblr"></i> </a>{% endif %}
   {% if site.owner.instagram %}<a href="http://instagram.com/{{ site.owner.instagram }}" target="_blank"><i class="icon-instagram"></i> </a>{% endif %}
