--- a/_includes/author-bio.html
+++ b/_includes/author-bio.html
@@ -9,5 +9,8 @@
   {% if site.owner.facebook %}<a href="http://facebook.com/{{ site.owner.facebook }}" target="_blank"><i class="icon-facebook"></i> </a>{% endif %}
   {% if site.owner.github %}<a href="http://github.com/{{ site.owner.github }}" target="_blank"><i class="icon-github"></i> </a>{% endif %}
   {% if site.owner.instagram %}<a href="http://instagram.com/{{ site.owner.instagram }}" target="_blank"><i class="icon-instagram"></i> </a>{% endif %}
+  {% if site.owner.tumblr %}<a href="http://{{ site.owner.tumblr }}.tumblr.com/" target="_blank"><i class="icon-tumblr"></i> </a>{% endif %}
+  {% if site.owner.email %}<a href="mailto:{{ site.owner.email }}" target="_blank"><i class="icon-mail"></i> </a>{% endif %}
+  
 </p>
 {% if site.owner.lastfm %}<p style="text-indent:0;"><a href="http://lastfm.com/{{ site.owner.lastfm }}" target="_blank"><i class="icon-lastfm"></i> Last.fm</a></p>{% endif %}
